# eslint-config-strict-mode

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE  README.md  Taskfile.yml  package-lock.json  package.json  package.json.liquid  pnpm-lock.yaml  pyproject.toml  start.sh  tsconfig.json  tsconfig.module.json
.assets/: EXAMPLE.md  FEATURES.md  features.md
.config/: common-keywords.json  nodemon.json  package-lock.json  requirements.txt  variables.json
.config/brew/: binary.rb  python.rb
.config/docs/: Taskfile.yml  blueprint-contributing.md  blueprint-readme-cli.md  package.json  pyproject.toml  start.sh  variables.json
.config/docs/contributing/: code-format.md  code-style.md  commenting.md  linting.md  pull-requests.md
.config/docs/local/: package-lock.json
.config/docs/readme/: installation.md  quick-description.md  requirements.md  subheader.md
.config/docs/readme-scoop/: subheader.md
.config/docs/readme-tap/: requirements.md  subheader.md
.config/taskfiles/ansible/: Taskfile-populate.yml  Taskfile.yml
.config/taskfiles/boilerplate/: Taskfile-prompt.yml
.config/taskfiles/ci/: Taskfile.yml
.config/taskfiles/common/: Taskfile.yml
.config/taskfiles/docker/: Taskfile-build.yml  Taskfile.yml
.config/taskfiles/fix/: Taskfile.yml
.config/taskfiles/git/: Taskfile-github.yml  Taskfile-gitlab.yml  Taskfile-hook.yml  Taskfile.yml
.config/taskfiles/go/: Taskfile-goreleaser.yml
.config/taskfiles/install/: Taskfile-go.yml  Taskfile-npm.yml  Taskfile-python.yml  Taskfile-software.yml  Taskfile.yml
.config/taskfiles/lint/: Taskfile-markdown.yml  Taskfile-prose.yml  Taskfile.yml
.config/taskfiles/nest/: Taskfile.yml
.config/taskfiles/npm/: Taskfile-cov.yml  Taskfile-doc.yml  Taskfile.yml
.config/taskfiles/packer/: Taskfile-build.yml
.config/taskfiles/python/: Taskfile-test.yml
.config/taskfiles/release/: Taskfile.yml
.config/taskfiles/security/: Taskfile.yml
.config/taskfiles/symlink/: Taskfile.yml
.config/taskfiles/upstream/: Taskfile-common.yml
.devcontainer/: devcontainer.json
.gitlab/ci/scripts/: update-init.sh
docs/: CHANGELOG.md  CONTRIBUTING.md  REACT.md
docs/partials/: guide.md
local/: cyclonedx-npm-npm.json  package-lock.json
local/slim/: exe.txt  install.txt
src/: constants.ts  index.js  index.ts  lib.js  lib.ts  library.ts  main.ts
src/rules/: ansible.ts  base.ts  gitlab-ci.ts  javascript.ts  json.ts  taskfile.ts  ts-spec.ts  tsspec.ts  typescript.ts  yaml.ts
