[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry]
authors = ["Brian Zalewski <brian@megabyte.space>"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Environment :: MacOS X",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: MacOS",
  "Operating System :: Microsoft :: Windows :: Windows 10",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: JavaScript",
  "Programming Language :: Other Scripting Engines",
  "Programming Language :: Other",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python",
  "Programming Language :: Unix Shell",
  "Topic :: Desktop Environment",
  "Topic :: Documentation",
  "Topic :: Internet",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Documentation",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development",
  "Topic :: System :: Installation/Setup",
  "Topic :: Utilities"
]
description = "ESLint configuration for linting TS, JS, JSON, YAML, and TOML"
documentation = "https://megabyte.space/docs/npm/config"
homepage = "https://megabyte.space"
include = ["docs/CHANGELOG.md", "LICENSE"]
keywords = [
  "config",
  "editorconfig",
  "eslint",
  "eslint-config",
  "formatter",
  "javascript",
  "lint",
  "linter",
  "mblabs",
  "megabytelabs",
  "prettier",
  "professormanhattan",
  "schema",
  "toml",
  "tsdoc",
  "typescript",
  "washingtondc",
  "yaml"
]
license = "MIT"
name = "eslint-config-strict-mode"
readme = "README.md"
repository = "https://github.com/ProfessorManhattan/eslint-config-strict-mode"
version = "1.0.53"

[tool.poetry.dependencies]
pip = { version = "^21.3.0", optional = true }
python = ">=3.10.0,<4.0.0"
setuptools = { version = "^58.2.0", optional = true }
twine = { version = "^3.8.0", optional = true }
wheel = { version = "^0.37.1", optional = true }

[tool.poetry.dev-dependencies]
blocklint = "^0.2.3"
pre-commit-hooks = "^4.0.1"
proselint = "^0.12.0"
toml-sort = "^0.19.0"
yamllint = "^1.26.3"

[tool.poetry.extras]
semantic = ["pip", "setuptools", "twine", "wheel"]

[tool.poetry.urls]
"Bug Tracker" = "https://gitlab.com/megabyte-labs/npm/configs/eslint/-/issues"
GitHub = "https://github.com/ProfessorManhattan/eslint-config-strict-mode"
GitLab = "https://gitlab.com/megabyte-labs/npm/configs/eslint"
"Give Directly" = "https://givedirectly.org"
"Open Collective" = "https://opencollective.com/megabytelabs"
Patreon = "https://www.patreon.com/ProfessorManhattan"
